--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
     <section id="boxes">
       <div class="container">
         <div class="box">
-          <img src="logo_html.png" alt="">
+          <img src="./logo_html.png" alt="">
           <h3>html5 markup</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="box">
-          <img src="logo_css.png" alt="">
+          <img src="./logo_css.png" alt="">
           <h3>css3 styling   </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="box">
-          <img src="logo_brush.png" alt="">
+          <img src="./logo_brush.png" alt="">
           <h3>graphic design</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
