--- a/index.html
+++ b/index.html
@@ -66,6 +66,38 @@
 
     </section>
 
+    <!-- added testimonial-->
+    <!-- avatar sample file added-->
+    <div id="testimonial">
+
+      <div class="testimonial">
+          <img class="testimonial_avatar" src="./Avatar samples/sample avatar.jpg" alt="invalid">
+          <div class="testimonial_user">
+            <h3 class="user_name">Wahidah</h3>
+            <h4 class="user_company">SS</h4>
+          </div>
+          <p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+
+        <div class="testimonial">
+          <img class="testimonial_avatar" src="./Avatar samples/sample avatar 2.jpg" alt="">
+          <div class="testimonial_user">
+            <h3 class="user_name">Qayyum</h3>
+            <h4 class="user_company">TIMES</h4>
+          </div>
+          <p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+
+        <div class="testimonial">
+          <img class="testimonial_avatar" src="./Avatar samples/sample avatar 3.jpg" alt="">
+          <div class="testimonial_user">
+            <h3 class="user_name">Mizul</h3>
+            <h4 class="user_company">UDEMY</h4>
+          </div>
+          <p class="testimonial_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+
     <footer>
       <p>Adam's Web Design, copyright &copy; 2020</p>
     </footer>
